src/server/ws/snapshots/carapace__server__ws__golden_tests__golden_trace__session_lifecycle_2_send.snap
---
source: src/server/ws/golden_tests.rs
assertion_line: 583
expression: normalized
---
{
  "error": {
    "code": "invalid_request",
    "message": "idempotencyKey is required",
    "retryable": false
  },
  "ok": false
}
